fix(treegrid): error vertical alignment of cursor border

--- a/src/components/TreeGrid/TreeGrid.scss
+++ b/src/components/TreeGrid/TreeGrid.scss
@@ -25,3 +25,28 @@
 .GridDebugTag, .GridDebugTagMax, .GridDebugButtons, .GridDebugButtonsMax {
   z-index: 99000; // greater than IBM carbon modal z-index
 }
+
+.GridMain {
+  // overwrite `vertical-align: baseline` of td in IBM carbon css, to fix the issue of vertical alignment of cursor border
+  td:not(
+    .TBCellBase, .TBVScrollNormal, .TBRowSpace, .TBCellSpaceBase, .TBHeaderGroupCustom, .TBCellSpaceButton, .TBHScrollNormal,
+    .TMCellBase, .TMVScrollNormal, .TMRowSpace, .TMCellSpaceBase, .TMHeaderGroupCustom, .TMCellSpaceButton, .TMHScrollNormal,
+    .TSCellBase, .TSVScrollNormal, .TSRowSpace, .TSCellSpaceBase, .TSHeaderGroupCustom, .TSCellSpaceButton, .TSHScrollNormal,
+    .TTCellBase, .TTVScrollNormal, .TTRowSpace, .TTCellSpaceBase, .TTHeaderGroupCustom, .TTCellSpaceButton, .TTHScrollNormal,
+    .TWCellBase, .TWVScrollNormal, .TWRowSpace, .TWCellSpaceBase, .TWHeaderGroupCustom, .TWCellSpaceButton, .TWHScrollNormal,
+    .CBCellBase, .CBVScrollNormal, .CBRowSpace, .CBCellSpaceBase, .CBHeaderGroupCustom, .CBCellSpaceButton, .CBHScrollNormal,
+    .CCCellBase, .CCVScrollNormal, .CCRowSpace, .CCCellSpaceBase, .CCHeaderGroupCustom, .CCCellSpaceButton, .CCHScrollNormal,
+    .CECellBase, .CEVScrollNormal, .CERowSpace, .CECellSpaceBase, .CEHeaderGroupCustom, .CECellSpaceButton, .CEHScrollNormal,
+    .CGCellBase, .CGVScrollNormal, .CGRowSpace, .CGCellSpaceBase, .CGHeaderGroupCustom, .CGCellSpaceButton, .CGHScrollNormal,
+    .CLCellBase, .CLVScrollNormal, .CLRowSpace, .CLCellSpaceBase, .CLHeaderGroupCustom, .CLCellSpaceButton, .CLHScrollNormal,
+    .COCellBase, .COVScrollNormal, .CORowSpace, .COCellSpaceBase, .COHeaderGroupCustom, .COCellSpaceButton, .COHScrollNormal,
+    .CPCellBase, .CPVScrollNormal, .CPRowSpace, .CPCellSpaceBase, .CPHeaderGroupCustom, .CPCellSpaceButton, .CPHScrollNormal,
+    .CQCellBase, .CQVScrollNormal, .CQRowSpace, .CQCellSpaceBase, .CQHeaderGroupCustom, .CQCellSpaceButton, .CQHScrollNormal,
+    .CFCellBase, .CFVScrollNormal, .CFRowSpace, .CFCellSpaceBase, .CFHeaderGroupCustom, .CFCellSpaceButton, .CFHScrollNormal,
+    .CRCellBase, .CRVScrollNormal, .CRRowSpace, .CRCellSpaceBase, .CRHeaderGroupCustom, .CRCellSpaceButton, .CRHScrollNormal,
+    .CSCellBase, .CSVScrollNormal, .CSRowSpace, .CSCellSpaceBase, .CSHeaderGroupCustom, .CSCellSpaceButton, .CSHScrollNormal,
+    .CLCellBase, .CLVScrollNormal, .CLRowSpace, .CLCellSpaceBase, .CLHeaderGroupCustom, .CLCellSpaceButton, .CLHScrollNormal
+  ) {
+    vertical-align: middle;
+  }
+}
